# npmp-cli

./: .env.example  .gitignore  README.md  cli-examples.md  cli-manual.md  npmp-cli.py  npmp-cli.spec  pyproject.toml  run.sh
.github/workflows/: release.yml
src/npmp_cli/: __init__.py  api_client.py  cli.py  cli_access_lists.py  cli_certificates.py  cli_common.py  cli_dead_hosts.py  cli_proxy_hosts.py  cli_redirect_hosts.py  cli_settings.py  cli_streams.py  configmanager.py  docker_scanner.py  docker_syncer.py  dockersyncer.py  filemanager.py  jsonfilemanager.py  npmplus_api.py  npmplus_client.py  utils.py  yaml_loader.py  yaml_writer.py  ymlfilemanager.py
src/npmp_cli/docker/: __init__.py  scanner.py  specs.py  sync_dead.py  sync_proxy.py  sync_redirect.py  sync_stream.py
src/npmp_cli/models/: __init__.py  access_list.py  certificate.py  dead_host.py  kinds.py  proxy_host.py  redirection_host.py  stream.py  user.py
tests/: conftest.py  test-integration.sh  test_cli.py  test_client_url.py  test_conf.py  test_configuration.py  test_docker_scan.py  test_docker_sync.py  test_integration_api.py  test_integration_cli.py  test_integration_docker.py  test_integration_npmplus.py  test_json_to_compose.py  test_load.py  test_save.py  test_unit_cli_manual_commands.py  test_unit_client.py  test_unit_docker.py  vulture_allowlist.py
