[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "npmp-cli"
version = "0.1.58"
description = "Python client + saver for NPMplus (ZoeyVid/NPMplus)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "UNLICENSED" }
authors = [{ name = "" }]
dependencies = [
  "docker>=7.0",
  "httpx>=0.26",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.8",
]

[project.scripts]
npmp-cli = "npmp_cli.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "integration: tests that hit a real NPMplus server (opt-in)",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
]
ignore = [
  "W191",  # indentation-contains-tabs (formatter uses tabs)
  "E501",  # line-too-long (formatter handles this)
  "B008",  # function-call-in-default-argument (typer pattern)
  "SIM105",  # suppressible-exception (prefer explicit try/except)
  "SIM108",  # if-else-block-instead-of-if-exp (prefer readable if/else)
  "SIM118",  # in-dict-keys (explicit .keys() is fine)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
