[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "npmp-cli"
version = "0.2.56"
description = "Python CLI for NPMplus (ZoeyVid/NPMplus)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
authors = [{ name = "Jaano" }]
dependencies = [
  "docker>=7.0",
  "httpx>=0.26",
  "python-dotenv>=1.0",
  "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/Jaano/npmp-cli"
Repository = "https://github.com/Jaano/npmp-cli"

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.11",
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "pyright>=1.1.390",
  "ruff>=0.8",
  "vulture>=2.11",
]

[project.scripts]
npmp-cli = "npmp_cli.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q -m 'not integration' --cov=npmp_cli --cov-report=term"
testpaths = ["tests"]
markers = [
  "integration: integration tests (slow; requires live env)",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
]
ignore = [
  "E501",  # line-too-long (formatter handles this)
  "B008",  # function-call-in-default-argument (typer pattern)
  "SIM105",  # suppressible-exception (prefer explicit try/except)
  "SIM108",  # if-else-block-instead-of-if-exp (prefer readable if/else)
  "SIM118",  # in-dict-keys (explicit .keys() is fine)
]

[tool.ruff.lint.isort]
known-first-party = ["npmp_cli"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv", "NPMplus"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingTypeStubs = false

